crates/keron-lang/tests/corpus/errors/parse/val_named_realize.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `realize` is a reserved keyword
  --> 1:5
  |
1 | val realize = 1
  |     ^
